[Redesign/Timetable] - added new endpoint PATCH :/timetableId
